postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: 01061875164/postgres15-alpine:v3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: healthcheck
              mountPath: /healthcheck.sh
              subPath: healthcheck.sh
          livenessProbe:
            exec:
              command: ["sh", "/healthcheck.sh"]
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            exec:
              command: ["sh", "/healthcheck.sh"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: healthcheck
          configMap:
            name: postgres-health
