result-SVC.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  type: NodePort
  selector:
    app: result
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30081
